Added compatibility for 10 inch tablets.

--- a/SensorMax/res/layout/fragment_measurement.xml
+++ b/SensorMax/res/layout/fragment_measurement.xml
@@ -43,7 +43,7 @@
 
                 <LinearLayout
                     android:id="@+id/infoBox"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
@@ -209,8 +209,9 @@
                         android:layout_height="wrap_content" >
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:layout_weight="1.9"
                             android:orientation="vertical" >
 
                             <TextView
@@ -240,8 +241,9 @@
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:layout_weight="1"
                             android:orientation="vertical" >
 
                             <EditText
