Fixed clicking noise using tone generator.

--- a/SensorMax/res/layout/fragment_tone_generator.xml
+++ b/SensorMax/res/layout/fragment_tone_generator.xml
@@ -127,7 +127,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="@string/duration_in_ms" />
+                    android:text="@string/duration_in_s" />
 
                 <EditText
                     android:id="@+id/durationEditText"
