--- a/SensorMax/res/layout/fragment_settings.xml
+++ b/SensorMax/res/layout/fragment_settings.xml
@@ -7,8 +7,8 @@
     android:fillViewport="true" >
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="10dp" >
 
@@ -124,69 +124,16 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_height="match_parent" >
 
-            <TextView
-                android:id="@+id/liveStreamTextView"
+            <Button
+                android:id="@+id/livestreamButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:gravity="center"
-                android:text="Livestream - Einstellungen"
-                android:textStyle="bold" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
-
-                <TextView
-                    android:id="@+id/addressTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:text="@string/address" />
-
-                <EditText
-                    android:id="@+id/addressEditText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:hint="@string/http" />
-
-            </LinearLayout>
-            
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
-
-                <TextView
-                    android:id="@+id/deviceIDTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:text="@string/device_id" />
-
-                <EditText
-                    android:id="@+id/deviceIDEditText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_weight="1"
-                    android:ems="10" />
-
-            </LinearLayout>
+                android:layout_gravity="bottom"
+                android:text="@string/livestream_settings" />
 
         </LinearLayout>
-        
-        <View    
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"
-            android:background="#CDCDCD"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp" />
 
     </LinearLayout>
 
