--- a/SensorMax/res/layout/fragment_settings.xml
+++ b/SensorMax/res/layout/fragment_settings.xml
@@ -121,6 +121,19 @@
             android:background="#CDCDCD"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp" />
+        
+         <CheckBox
+            android:id="@+id/recordWholeAudioSpectrumCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/record_audio_spectrum" />
+        
+        <View    
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:background="#CDCDCD"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
